[workspace]
members = [
    "frontend",
    "client",
    "tests/integration",
    "workers/common",
    "workers/polytope-fe-worker",
    "workers/fdb-worker",
    "workers/mars-worker",
    "workers/test-worker",
    "utils/metkit",
]
resolver = "2"

[patch."https://github.com/ecmwf/polytope-edr"]
polytope-edr = { path = "../polytope-edr" }

[patch."https://github.com/ecmwf/bits-broker"]
bits = { path = "../bits/bits" }
bits-ecmwf = { path = "../bits/bits-ecmwf" }

[patch."https://github.com/ecmwf/auth-o-tron"]
authotron = { path = "../auth-o-tron/authotron" }
authotron-client = { path = "../auth-o-tron/authotron-client" }
authotron-types = { path = "../auth-o-tron/authotron-types" }
