# SPDX-FileCopyrightText: 2026 European Centre for Medium-Range Weather Forecasts (ECMWF)
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "observability",
    "frontend",
    "loadgen",
    "client",
    "tests/integration",
    "workers/common",
    "workers/polytope-fe-worker",
    "workers/fdb-worker",
    "workers/test-worker",
]
# mars-worker and metkit require native eckit/metkit C++ libraries.
# Include them explicitly when developing those crates:
#   cargo build -p mars-worker
exclude = [
    "workers/mars-worker",
    "utils/metkit",
]
resolver = "2"



