[package]
name = "polytope-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bits = { git = "https://github.com/ecmwf/bits-broker", branch = "main", features = ["tikv"] }
bits-ecmwf = { git = "https://github.com/ecmwf/bits-broker", branch = "main" }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
