[package]
name = "polytope-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "polytope_server"
path = "src/lib.rs"

[[bin]]
name = "polytope-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors", "compression-full"] }
polytope-edr = { git = "https://github.com/ecmwf/polytope-edr", branch = "master" }
bits = { git = "https://github.com/ecmwf/bits-broker", branch = "main", features = ["nats"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
roxmltree = "0.20"

# Metkit expansion (optional — requires C++ metkit libs at build+runtime)
metkit = { path = "../utils/metkit", optional = true }

# Auth (shared crate from auth-o-tron workspace)
authotron-client = { git = "https://github.com/ecmwf/auth-o-tron.git", branch = "main" }
authotron-types = { git = "https://github.com/ecmwf/auth-o-tron.git", branch = "main" }

[features]
default = []
metkit = ["dep:metkit"]

[dev-dependencies]
mockito = "1.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
