# SPDX-FileCopyrightText: 2026 European Centre for Medium-Range Weather Forecasts (ECMWF)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "polytope-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "polytope_server"
path = "src/lib.rs"

[[bin]]
name = "polytope-server"
path = "src/main.rs"

[dependencies]
polytope-observability = { path = "../observability" }
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors", "compression-full"] }
polytope-edr = { git = "https://github.com/ecmwf/polytope-edr", tag = "0.1.0" }
bits = { git = "https://github.com/ecmwf/bits-broker.git", tag = "0.1.0", features = [
  "nats",
] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = [
  "metrics",
], optional = true }
opentelemetry-prometheus = { version = "0.32", optional = true }
prometheus = { version = "0.14", optional = true, default-features = false }
roxmltree = "0.20"
rmcp = { version = "2.2.0", features = [
  "transport-streamable-http-server",
  "schemars",
] }

# Metkit expansion (optional — requires C++ metkit libs at build+runtime)
metkit = { path = "../utils/metkit", optional = true }

# Auth (shared crate from auth-o-tron workspace)
authotron-client = { git = "https://github.com/ecmwf/auth-o-tron.git", tag = "0.3.7" }
authotron-types = { git = "https://github.com/ecmwf/auth-o-tron.git", tag = "0.3.7" }

[features]
default = []
metkit = ["dep:metkit"]
telemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-prometheus",
  "dep:prometheus",
]

[dev-dependencies]
mockito = "1.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }
