[package]
name = "loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
