[package]
name = "polytope-worker-common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip"] }
async-trait = "0.1"
axum = "0.8"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
