[package]
name = "fdb-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
polytope-worker-common = { path = "../common" }
reqwest.workspace = true
rsfdb = { git = "https://github.com/ecmwf/rsfdb", branch = "develop" }
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing-subscriber.workspace = true
