[package]
name = "fdb-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
polytope-worker-common = { path = "../common" }
serde_yml = "0.0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
rsfdb = { git = "https://github.com/ecmwf/rsfdb", branch = "develop" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
