[package]
name = "mars-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
mars-client = { path = "../../../mars-client-bundle/mars-client-cpp/bindings/rust/mars-client" }
polytope-worker-common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
