[package]
name = "mars-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_28"] }
kube = { version = "0.91", default-features = false, features = ["client", "rustls-tls"] }
mars-client = { git = "https://github.com/ecmwf/mars-client-cpp", branch = "feature/library-api" }
polytope-worker-common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
