[package]
name = "polytope-fe-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
clap.workspace = true
polytope-worker-common = { path = "../common" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
