[package]
name = "polytope-fe-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
clap.workspace = true
polytope-worker-common = { path = "../common" }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
