[package]
name = "test-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
polytope-worker-common = { path = "../common" }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
