[package]
name = "test-worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_worker"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
polytope-worker-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
